--- a/src/index.pug
+++ b/src/index.pug
@@ -21,27 +21,25 @@ block main
 
         section
             h3 Fundamentos
-            ul
-                li Instalación
-                li Plantilla
-                li Directivas
-                li Propiedades Computadas Y Observadores
-                li Manejos de Estilos y Clases
-                li Bloque Condicional
-                li Listas
-                li Eventos
-                li Formularios
+            p Instalación, Plantilla, Directivas, Propiedades Computadas, Métodos, Manejos de Estilos/Clases, Bloque Condicional, Listas, Eventos, Formularios.
 
         section
             h3 Componentes
+            p Introducción, Crear Componentes, Herramienta de Desarrollo de Vue, Componentes para Proyecto, Componente Hijos, Scoped, Pasando Datos entre Componentes, Validar Datos, Eventos, Comunicación mediante el Evento Bus, Pasando Datos entre Eventos, Slots, Componentes Dinámicos, Keeping, Ciclo de Vida.
 
         section
             h3 Vue Router
+            p Instalación, Registrar Rutas, Mostrando Rutas, Rutas Dinámicas, Rutas Anidadas, Rutas Nombradas, Redirecciones y Alias, Pasando Props, Historial HTML5
 
         section
             h3 Axios
+            ul
+                li ¿Que és?
+                li Instalación
+                li Peticiones Ajax
 
         section
             h3 Mini Proyecto
+            p VueCine(Api OMDB)
 
 
