--- a/src/index.pug
+++ b/src/index.pug
@@ -42,4 +42,28 @@ block main
             h3 Mini Proyecto
             p VueCine(Api OMDB)
 
+    section
+        h3
+            a(href="https://vuejs.org/" target="_blank") ¿Qué es VueJS?
+        p Es un framework progresivo de javascript para construir interfaces web interactivas.
 
+    section
+        h3 Creador de Vue
+        h5 Evan You
+        img(src="/img/evan-you.jpg", alt="Evan You", wight="200" height="200")
+
+    section
+        h3 Historia
+        p Evan You que trabajaba en Google realizando prototipos y en el core del Framework de Meteor, hasta que pensó en otra forma de hacer una opción más fácil que abarcara las necesidades a la hora de hacer prototipos. Así surgió Vue en el 2014, desde entonces ha tenido una gran evolución y sigue creciendo en su versión 2.
+
+    section
+        h3 Características
+        ul
+            li Fácil de Aprender
+            li Sistema de Data Binding
+            li Sistema de Componentes
+            li Reactivo
+            li Optimizado: su core ocupa 74KB(Bastante Liviano)
+            li Excelente Librería para hacer peticiones http, validación de formulario, etc.
+            li Escalable
+            li Licencia MIT
