--- a/src/index.pug
+++ b/src/index.pug
@@ -21,7 +21,7 @@ block main
 
         section
             h3 Fundamentos
-            p Instalación, Plantilla, Directivas, Propiedades Computadas, Métodos, Manejos de Estilos/Clases, Bloque Condicional, Listas, Eventos, Formularios.
+            p Instalación, Instancia, Propiedades, Mostrar Datos, Directivas, Propiedades Computadas, Métodos, Manejos de Estilos/Clases, Bloque Condicional, Listas, Eventos, Formularios.
 
         section
             h3 Componentes
@@ -67,3 +67,327 @@ block main
             li Excelente Librería para hacer peticiones http, validación de formulario, etc.
             li Escalable
             li Licencia MIT
+
+    section
+        section
+            h1 Fundamentos
+
+        section
+            h3 Instalación #1
+            p Vía CDN
+            pre
+                code(class="html" data-trim data-noescape)
+                    | &lt;!DOCTYPE html&gt;
+                    | &lt;html&gt;
+                    | &lt;head&gt;
+                    |     &lt;meta charset="utf-8" /&gt;
+                    |     &lt;meta http-equiv="X-UA-Compatible" content="IE=edge"&gt;
+                    |     &lt;title&gt;Curso VueJS&lt;/title&gt;
+                    |     &lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;
+                    |     &lt;!-- Vue CDN --&gt;
+                    |     &lt;script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"&gt;&lt;/script&gt;
+                    | &lt;/head&gt;
+                    | &lt;body&gt;
+                    | &lt;/body&gt;
+                    | &lt;/html&gt;
+
+        section
+            h3 Instalación #2
+            p
+                a(href="https://vuejs.org/v2/guide/installation.html", target="_blank") Download
+            pre
+                code(class="html" data-trim data-noescape)
+                    | &lt;!DOCTYPE html&gt;
+                    | &lt;html&gt;
+                    | &lt;head&gt;
+                    |     &lt;meta charset="utf-8" /&gt;
+                    |     &lt;meta http-equiv="X-UA-Compatible" content="IE=edge"&gt;
+                    |     &lt;title&gt;Curso VueJS&lt;/title&gt;
+                    |     &lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;
+                    | &lt;/head&gt;
+                    | &lt;body&gt;
+                    |     &lt;!-- VueJS --&gt;
+                    |     &lt;script src="js/vue.js"&gt;&lt;/script&gt;
+                    | &lt;/body&gt;
+                    | &lt;/html&gt;
+
+        section
+            h3 Patrón MVVM
+            p Consiste en pasar datos desde el código javascript "MODELO" al código html "VISTA", de una manera sencilla, sin tener que tratar directamente con las etiquetas html desde javascript.
+
+        section
+            h3 Instancia de Vue
+            pre
+                code(class="javascript" data-trim data-noescape)
+                    | new Vue();
+        section
+            h3 Propiedades de Vue
+            pre
+                code(class="javascript" data-trim data-noescape)
+                    | var app = new Vue({
+                    |     el: '#app',
+                    |
+                    |     data: {
+                    |
+                    |         ciudad: 'Barcelona',
+                    |         pais: 'Venezuela',
+                    |
+                    |     },
+                    |
+                    |     computed: {
+                    |         dondeEstoy: function () {
+                    |             return 'Estoy en ' + this.ciudad + ' ' + this.pais;
+                    |         }
+                    |     },
+                    |
+                    |     methods: {
+                    |         mensajeCiudad: function () {
+                    |             console.log('Soy la Ciudad de ' + this.ciudad);
+                    |         }
+                    |     },
+                    |
+                    |     mounted: function () {
+                    |         this.mensajeCiudad();
+                    |     }
+                    | });
+
+        section
+            h3 Propiedad el
+            ul
+                li Esta Propiedad determina el #[u TAG HTML] que operará nuestra instancia Vue.
+                li Cada Instancia de Vue apunta a un solo nodo html y sus hijos.
+                li Podemos utilizar como selector una clase/id/etiqueta.
+            pre
+                code(class="javascript" data-trim data-noescape)
+                    | var app = new Vue({
+                    |     //Propiedad el
+                    |     el: '#app' //Selector por ID
+                    | });
+
+        section
+            h3 Propiedad data
+            p Es un objeto con propiedades que podemos utilizar en nuestra instancia.
+            pre
+                code(class="javascript" data-trim data-noescape)
+                    | var app = new Vue({
+                    |     el: '#app',
+                    |     //Propiedad Data
+                    |     data: {
+                    |         ciudad: 'Barcelona',
+                    |         pais: 'Venezuela',
+                    |     },
+                    | });
+
+        section
+            h3 Mostrar Datos
+            p #[u INTERPOLACIÓN:] Permite enlazar datos entre VueJS y el DOM. Utilizar las dobles llaves.
+            pre
+                code(class="html" data-trim data-noescape)
+                    | &lt;body&gt;
+                    |     &lt;div id="app"&gt;
+                    |         &lt;p&gt;Ciudad: {{ ciudad }}&lt;/p&gt;
+                    |         &lt;p&gt;País: {{ pais }}&lt;/p&gt;
+                    |     &lt;/div&gt;
+                    |     &lt;!-- VueJS --&gt;
+                    |     &lt;script src="js/vue.js"&gt;&lt;/script&gt;
+                    |     &lt;!-- Main --&gt;
+                    |     &lt;script src="js/main.js"&gt;&lt;/script&gt;
+                    | &lt;/body&gt;
+
+        section(data-menu-title="Hola Mundo" data-background-video="video/hola-mundo.mp4" data-background-video-loop="true")
+            h3 Hola Mundo
+
+        section
+            h1 Directivas
+
+        section
+            h3 V-TEXT
+            p Muestra contenido textual dentro de un elemento.
+            pre
+                code(class="html" data-trim data-noescape)
+                    | &lt;div id="app"&gt;
+                    |     &lt;h1 v-text="mensaje"&gt;&lt;/h1&gt;
+                    | &lt;/div&gt;
+
+        section
+            h3 V-HTML
+            p Muestra contenido textual dentro de un elemento(Acepta Código HTML).
+            pre
+                code(class="javascript" data-trim data-noescape)
+                    | var app = new Vue({
+                    |     el: '#app',
+                    |     data: {
+                    |         titulo: '&lt;p&gt;Curso de VueJS&lt;/p&gt;'
+                    |     }
+                    | });
+            pre
+                code(class="html" data-trim data-noescape)
+                    | &lt;div id="app"&gt;
+                    |     &lt;h1 v-html="titulo"&gt;&lt;/h1&gt;
+                    | &lt;/div&gt;
+
+        section
+            h3 V-SHOW
+            p Permite Mostrar u Ocultar contenido de DOM.
+            pre
+                code(class="javascript" data-trim data-noescape)
+                    | var app = new Vue({
+                    |     el: '#app',
+                    |     data: {
+                    |         mostrarTitulo: true,
+                    |         mostrarSubtitulo: false
+                    |     }
+                    | });
+
+            pre
+                code(class="html" data-trim data-noescape)
+                    | &lt;div id="app"&gt;
+                    |     &lt;h1 v-show="mostrarTitulo"&gt;Curso de VueJS&lt;/h1&gt;
+                    |     &lt;h3 v-show="mostrarSubtitulo"&gt;Framework de JavaScript&lt;/h3&gt;
+                    | &lt;/div&gt;
+
+        section
+            h3 V-IF
+            p Bloque Condicional
+            pre
+                code(class="html" data-trim data-noescape)
+                    | &lt;div id="app"&gt;
+                    |     &lt;h1 v-if="mostrarTitulo"&gt;Curso de VueJS&lt;/h1&gt;
+                    |     &lt;h3 v-if="mostrarSubtitulo"&gt;Framework de JavaScript&lt;/h3&gt;
+                    |     &lt;h3 v-else&gt;No Tengo SubTítulo&lt;/h3&gt;
+                    | &lt;/div&gt;
+
+        section(data-menu-title="V-FOR #1")
+            h3 V-FOR
+            p Listas
+            pre
+                code(class="javascript" data-trim data-noescape)
+                    | var app = new Vue({
+                    |     el: '#app',
+                    |     data: {
+                    |         cursos: ['Vuejs', 'Laravel', 'GitHub', 'Front-End'],
+                    |         alumnos: [
+                    |             { nombre: 'Maria', edad: 25 },
+                    |             { nombre: 'Pedro', edad: 30 },
+                    |             { nombre: 'Jose', edad: 18 }
+                    |         ]
+                    |     }
+                    | });
+
+        section(data-menu-title="V-FOR #2")
+            h3 V-FOR
+            pre
+                code(class="html" data-trim data-noescape)
+                    | &lt;div id="app"&gt;
+                    |     &lt;ul&gt;
+                    |         &lt;li v-for="curso in cursos"&gt;{{ curso }}&lt;/li&gt;
+                    |     &lt;/ul&gt;
+                    |     &lt;hr&gt;
+                    |     &lt;ul&gt;
+                    |         &lt;li v-for="alumno in alumnos"&gt;{{ alumno.nombre }} - Edad: {{ alumno.edad }}&lt;/li&gt;
+                    |     &lt;/ul&gt;
+                    | &lt;/div&gt;
+
+        section(data-menu-title="V-FOR + Index")
+            h3 V-FOR + Index
+            pre
+                code(class="html" data-trim data-noescape)
+                    | &lt;div id="app"&gt;
+                    |     &lt;ul&gt;
+                    |         &lt;li v-for="curso in cursos"&gt;{{ curso }}&lt;/li&gt;
+                    |     &lt;/ul&gt;
+                    |     &lt;hr&gt;
+                    |     &lt;ul&gt;
+                    |         &lt;li v-for="alumno in alumnos"&gt;{{ alumno.nombre }} - Edad: {{ alumno.edad }}&lt;/li&gt;
+                    |     &lt;/ul&gt;
+                    | &lt;/div&gt;
+
+        section(data-menu-title="V-FOR PropertyName")
+            h3 V-FOR + PropertyName
+            pre
+                code(class="javascript" data-trim data-noescape)
+                    | var app = new Vue({
+                    |     el: '#app',
+                    |     data: {
+                    |         profesor: {
+                    |             nombre: 'Jonathan Duran',
+                    |             edad: 31,
+                    |             carrera: 'Desarrollo Web'
+                    |         }
+                    |     }
+                    | });
+
+        section
+            h3 V-BIND
+            p Permite vincular un Atributo HTML a un valor que tenemos en nuestro Modelo.
+            pre
+                code(class="javascript" data-trim data-noescape)
+                    | var app = new Vue({
+                    |     el: '#app',
+                    |     data: {
+                    |         btnDisabled: true
+                    |     }
+                    | });
+
+            pre
+                code(class="html" data-trim data-noescape)
+                    | &lt;div id="app"&gt;
+                    |     &lt;!-- v-bind:nombreAtributo --&gt;
+                    |     &lt;button v-bind:disabled="btnDisabled"&gt;Enviar Datos&lt;/button&gt;
+                    |     &lt;!-- El Atajo : --&gt;
+                    |     &lt;button :disabled="btnDisabled"&gt;Cancelar Datos&lt;/button&gt;
+                    | &lt;/div&gt;
+
+        section
+            h3 Métodos
+            pre
+                code(class="javascript" data-trim data-noescape)
+                    | var app = new Vue({
+                    |     el: '#app',
+                    |     data: {
+                    |         msj: 'Buenos Días'
+                    |     },
+                    |     methods: {
+                    |         mensajeAlert: function() {
+                    |             alert(this.msj);
+                    |         }
+                    |     }
+                    | });
+
+        section(data-menu-title="V-ON #1")
+            h3 V-ON
+            p Manejar Evento
+            pre
+                code(class="html" data-trim data-noescape)
+                    | &lt;div id="app"&gt;
+                    |     &lt;button v-on:click="mensajeAlert"&gt;Programate&lt;/button&gt;
+                    |     &lt;button @click="mensajeAlert"&gt;Programate @&lt;/button&gt;
+                    | &lt;/div&gt;
+
+        section(data-menu-title="V-ON #2")
+            h3 V-ON
+            p Manejar Evento
+            pre
+                code(class="javascript" data-trim data-noescape)
+                    | var app = new Vue({
+                    |     el: '#app',
+                    |     data: {
+                    |         msj: 'Buenos Días'
+                    |     },
+                    |     methods: {
+                    |         mensajeAlert: function(mensaje, event) {
+                    |             console.log(event);
+                    |             alert(mensaje);
+                    |         }
+                    |     }
+                    | });
+
+        section(data-menu-title="V-ON #3")
+            h3 V-ON
+            p Manejar Evento
+            pre
+                code(class="javascript" data-trim data-noescape)
+                    | &lt;div id="app"&gt;
+                    |     &lt;button @click="mensajeAlert('Hola Programate', $event)"&gt;Programate @&lt;/button&gt;
+                    | &lt;/div&gt;
+
