--- a/src/index.pug
+++ b/src/index.pug
@@ -50,7 +50,7 @@ block main
     section
         h3 Creador de Vue
         h5 Evan You
-        img(src="/img/evan-you.jpg", alt="Evan You", wight="200" height="200")
+        img(src="img/evan-you.jpg", alt="Evan You", wight="200" height="200")
 
     section
         h3 Historia
@@ -584,7 +584,7 @@ block main
     section
         section
             h1 Componetes
-            img(src="/img/bloque.png", alt="Componentes" height="250" width="250")
+            img(src="img/bloque.png", alt="Componentes" height="250" width="250")
 
         section(data-menu-title="Introducción #1")
             h3 Introducción
@@ -683,11 +683,11 @@ block main
 
         section
             h3 Vue Proyecto
-            img(src="/img/vue-project.png", alt="Vue Project")
+            img(src="img/vue-project.png", alt="Vue Project")
 
         section
             h3 Vue App
-            img(src="/img/vue-app.png", alt="Vue App" width="320" height="300")
+            img(src="img/vue-app.png", alt="Vue App" width="320" height="300")
 
         section
             h3 Vue Index
@@ -718,11 +718,11 @@ block main
 
         section Single-File
             h3 Single-File Components
-            img(src="/img/single-file.png", alt="Single File" width="250" height="300")
+            img(src="img/single-file.png", alt="Single File" width="250" height="300")
 
         section
             h3 Crear Componentes
-            img(src="/img/crear-components1.png", alt="Crear-Components 1")
+            img(src="img/crear-components1.png", alt="Crear-Components 1")
 
         section
             h3 Componente Box1
@@ -1341,7 +1341,7 @@ block main
             h1 Vue-Router
         section
             h3 SPA
-            img(src="/img/spa.png")
+            img(src="img/spa.png")
         section
             h3 Qué es?
             p Crear una aplicación de una sola página (SPA por sus siglas en inglés) con Vue.js + vue-router es muy sencillo. Con Vue.js, ya estamos estructurando nuestra aplicación con componentes. Cuando agregamos vue-router, todo lo que debemos hacer es mapear nuestros componentes a las rutas e informar a vue-router donde renderizarlas.
@@ -2025,6 +2025,10 @@ block main
                     |         {{ mensaje.contenido }}
                     |     &lt;/v-list-tile-content&gt;
                     | &lt;/v-list-tile&gt;
+
+    section
+        section
+            h1 Mini-Proyecto
 
 
 
